# Vidlord.com

./: .gitignore  BingSiteAuth.xml  README.md  analyze_downloads.py  pubspec.yaml
android/: build.gradle  gradle.properties
android/app/: build.gradle
error_pages/: 403.html  404.html  503.html
frontend/: index.html  package-lock.json  package.json  vidlord.nginx.conf
frontend/public/: ads_config.json  manifest.json  network_ads.json  robots.txt  sitemap.xml  sw.js
frontend/src/: App.css  App.jsx  index.css  main.jsx
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: download_task.dart  video_format.dart  video_info.dart
lib/services/: download_helper.dart  download_helper_native.dart  download_helper_stub.dart  download_helper_web.dart  download_service.dart  extractor_service.dart  storage_service.dart  video_player_helper.dart  video_player_helper_native.dart  video_player_helper_stub.dart  video_player_helper_web.dart
lib/theme/: app_colors.dart  app_spacing.dart  (+2 more)
linux/: CMakeLists.txt  my_application.cc
test/: extractor_service_test.dart  widget_test.dart
vidlord-scraper/: .gitignore  Cargo.toml
vidlord-scraper/src/: errors.rs  lib.rs  main.rs  server.rs  tui.rs
vidlord-scraper/src/downloader/: hls.rs  http.rs  mod.rs  muxer.rs
vidlord-scraper/src/extractor/: generic.rs  instagram.rs  mod.rs  youtube.rs
vidlord-scraper/src/server/: auth.rs  config.rs  handlers.rs  mod.rs  utils.rs
vidlord-scraper/tests/: integration_test.rs
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+70 files in other folders)
