[package]
name = "vidlord-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
thiserror = "1.0"
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
tokio-stream = { version = "0.1", features = ["sync"] }
crossterm = "0.27"
mp4 = "0.14"
urlencoding = "2.1"
chrono = "0.4"
bcrypt = "0.15"
totp-rs = { version = "5.5", features = ["otpauth"] }
rand = "0.8"


[dev-dependencies]
tempfile = "3.10"

